# open-recap

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: extract-frames.md  transcribe.md
src/open_recap/: __init__.py  cli.py  transcriber.py
